# Vehicle-Service-Management-System

./: pyproject.toml  render.yaml  requirements.txt
vehicle/migrations/: 0010_alter_attendance_id_alter_customer_id_and_more.py
vehicleservicemanagement/: settings.py  wsgi.py
vehicleservicemanagement-master/: README.md  requirements.txt
